--- a/Examples/RGB-D/kinect2.yaml
+++ b/Examples/RGB-D/kinect2.yaml
@@ -5,19 +5,23 @@
 #--------------------------------------------------------------------------------------------
 
 # Camera calibration and distortion parameters (OpenCV)
-Camera.fx: 331.106134
-Camera.fy: 333.188054
-Camera.cx: 249.194854
-Camera.cy: 204.694182
+#Camera.fx: 331.106134
+#Camera.fy: 333.188054
+#Camera.cx: 249.194854
+#Camera.cy: 204.694182
+Camera.fx: 517.306408
+Camera.fy: 516.469215
+Camera.cx: 318.643040
+Camera.cy: 255.313989
 
-Camera.k1: 0
-Camera.k2: 0
-Camera.p1: 0
-Camera.p2: 0
-Camera.k3: 0
+Camera.k1: 0.262383
+Camera.k2: -0.953104
+Camera.p1: -0.005358
+Camera.p2: 0.002628
+Camera.k3: 1.163314
 
 Camera.width: 960 #640
-Camera.height: 640 #480
+Camera.height: 540 #480
 
 # Camera frames per second
 Camera.fps: 30.0
